components/kustomizations/stackweb/VERSION/base/stackweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: stackweb
  name: stackweb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: stackweb
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: stackweb
    spec:
      tolerations:
        - key: workload
          operator: Equal
          value: memory-intensive
          effect: NoSchedule
      nodeSelector:
        nodepool: memory-optimized
      containers:
        - envFrom:
            - configMapRef:
                name: stackweb--env
          image: stackai.azurecr.io/stackai/stackweb:latest
          name: stackweb
          command: ["/bin/sh", "-c", "npm run build && npm run start"]
          #command: ["/bin/sh", "-c", "npm run dev"]
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
      imagePullSecrets:
        - name: acr-secret
      restartPolicy: Always
