components/kustomizations/stackweb/VERSION/base/stackweb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackweb-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: ${APP_HOSTNAME} # This will be replaced by Flux with nip.io hostname from Terraform ConfigMap
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stackweb
                port:
                  number: 3000
